# stock-logistics-warehouse

./: README.md
account_move_line_stock_info/: README.rst  __manifest__.py
account_move_line_stock_info/i18n/: account_move_line_stock_info.pot  ar.po  bs.po  ca.po  cs.po  cs_CZ.po  de.po  en_GB.po  es.po  es_CR.po  es_EC.po  es_MX.po  fi.po  fr.po  fr_CH.po  gl.po  hr.po  hr_HR.po  hu.po  it.po  ja.po  lt.po  mk.po  mn.po  nb.po  nb_NO.po  nl.po  nl_BE.po  nl_NL.po  pt.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sl.po  sv.po  tr.po  tr_TR.po  vi_VN.po  zh_CN.po  (+1 more)
account_move_line_stock_info/models/: account_move_line.py
account_move_line_stock_info/tests/: test_account_move_line_stock_move.py
account_move_line_stock_info/views/: account_move_line_view.xml
setup/_metapackage/: pyproject.toml
stock_demand_estimate/: README.rst  __manifest__.py
stock_demand_estimate/i18n/: am.po  ar.po  bg.po  bs.po  ca.po  ca_ES.po  cs.po  da.po  de.po  el_GR.po  en_AU.po  en_GB.po  es.po  es_AR.po  es_CL.po  es_CO.po  es_CR.po  es_DO.po  es_EC.po  es_ES.po  es_MX.po  es_PE.po  es_PY.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  fr_CH.po  fr_FR.po  gl.po  gl_ES.po  he.po  hi.po  hr.po  hr_HR.po  hu.po  id.po  (+34 more)
stock_demand_estimate/models/: stock_demand_estimate.py
stock_demand_estimate/tests/: test_stock_demand_estimate.py
stock_demand_estimate/views/: stock_demand_estimate_view.xml
stock_location_empty/: README.rst  __manifest__.py
stock_move_location/: README.rst  __manifest__.py
stock_warehouse_calendar/: README.rst  __manifest__.py
(+31 files in other folders)
